--- a/index.html
+++ b/index.html
@@ -21,6 +21,51 @@
         <img src="./assets/logo.svg" alt="meet logo" class="logo-img">
       </a>
     </header>
+    <img class="hero-image-full" src="./assets/tablet/image-hero.png" alt="Multiple small images of people">
+    <main>
+      <section class="hero-text">
+        <h1>Group Chat for Everyone</h1>
+        <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
+      </section>
+      <div class="hero-btns">
+        <a class="download-btn" href="#top">Download &nbsp;<span>v1.3</span></a>
+        <a class="info-btn" href="#top">What is it?</a>
+      </div>
+      <div class="divider">
+        <div class="line"></div>
+        <div class="circle">
+          <p>01</p>
+        </div>
+      </div>
+      <div class="pictures">
+        <img src="./assets/desktop/image-woman-in-videocall.jpg" alt="a woman on a video call">
+        <img src="./assets/desktop/image-women-videochatting.jpg" alt="3 women video chatting on a phone">
+        <img src="./assets/desktop/image-men-in-meeting.jpg" alt="a man in a video meeting">
+        <img src="./assets/desktop/image-man-texting.jpg" alt="a man texting on phone">
+      </div>
+      <section class="modern-use">
+        <p class="cyan-text">Built for modern use</p>
+        <h2>Smarter meetings, all in one place</h2>
+        <p>Send messages, share files, show your screen, and record your meetings — all in one
+          workspace. Control who can join with invite&#8209;only team access, data encryption, and data export.</p>
+      </section>
+      <div class="divider">
+        <div class="line"></div>
+        <div class="circle">
+          <p>02</p>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <img src="./assets/tablet/image-footer.jpg" alt="woman listening to music">
+      <div class="overlay"></div>
+      <section class="footer-text">
+        <h2>Experience more together</h2>
+        <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
+        <a class="download-btn" href="#top">Download &nbsp;<span>v1.3</span></a>
+      </section>
+
+    </footer>
   </div>
 </body>
 
