Add desktop styles

--- a/index.html
+++ b/index.html
@@ -23,13 +23,19 @@
     </header>
     <img class="hero-image-full" src="./assets/tablet/image-hero.png" alt="Multiple small images of people">
     <main>
-      <section class="hero-text">
-        <h1>Group Chat for Everyone</h1>
-        <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
-      </section>
-      <div class="hero-btns">
-        <a class="download-btn" href="#top">Download &nbsp;<span>v1.3</span></a>
-        <a class="info-btn" href="#top">What is it?</a>
+      <div class="desktop-hero">
+        <img class="hero-image-left" src="./assets/desktop/image-hero-left.png" alt="Multiple small images of people">
+        <div class="hero-content">
+          <section class="hero-text">
+            <h1>Group Chat for Everyone</h1>
+            <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
+          </section>
+          <div class="hero-btns">
+            <a class="download-btn" href="#top">Download &nbsp;<span>v1.3</span></a>
+            <a class="info-btn" href="#top">What is it?</a>
+          </div>
+        </div>
+        <img class="hero-image-right" src="./assets/desktop/image-hero-right.png" alt="Multiple small images of people">
       </div>
       <div class="divider">
         <div class="line"></div>
@@ -57,7 +63,8 @@
       </div>
     </main>
     <footer>
-      <img src="./assets/tablet/image-footer.jpg" alt="woman listening to music">
+      <img class="footer-image-tablet" src="./assets/tablet/image-footer.jpg" alt="woman listening to music">
+      <img class="footer-image-desktop" src="./assets/desktop/image-footer.jpg" alt="woman listening to music">
       <div class="overlay"></div>
       <section class="footer-text">
         <h2>Experience more together</h2>
